<resources>
    <string name="app_name">Optics - list of clients</string>

    <string name="navigation_drawer_open" translatable="false" />
    <string name="navigation_drawer_close" translatable="false" />

    <string name="tv_settings">Settings</string>
    <string name="tv_language">Chosen language</string>
    <string name="tv_night_mode">Night mode</string>
    <string name="chosen_lang_txt">English</string>

    <string name="add_title">Add a new client</string>
    <string name="edit_title">Editing</string>
    <string name="all_clients_list">List of all clients</string>
    <string name="search">Search...</string>
    <string name="client_list">List of clients</string>
    <string name="additional">Additional</string>
    <string name="exit">Exit</string>
    <string name="choose_language">Choose Language:</string>

    <string name="product_name">Product name:</string>
    <string name="product_dioptre">Diopter:</string>
    <string name="product_purchase_date">Date of purchase:</string>
    <string name="product_wearing_time">Expiration date:</string>
    <string name="product_note">Notes:</string>
    <string name="client_edit">Edit</string>
    <string name="client_call">Call</string>

    <string name="full_name">Full name</string>
    <string name="enter_full_name">Enter full name...</string>
    <string name="phone_num">Phone number</string>
    <string name="gender">Gender:</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="product_expiration_days">Product expiration (days)</string>
    <string name="enter_product_name">Enter the product name...</string>
    <string name="enter_dioptre">Enter the diopter...</string>
    <string name="enter_wearing_time">Enter the expiration date...</string>
    <string name="enter_note">Enter the notes...</string>
    <string name="toast_added">Added</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete_desc">Are you sure you want to remove this client from the list?</string>
    <string name="error_enter_fullname">Enter full name</string>
    <string name="error_enter_phone_number">Enter phone number</string>
    <string name="error_enter_product_name">Enter the product name</string>
    <string name="error_enter_diopter">Enter the diopter</string>
    <string name="error_enter_expiration_time">Enter the wearing period</string>
    <string name="error_enter_days_number">Enter the number of days</string>
    <string name="days_left">Days left: </string>
    <string name="expired">Expired!</string>
    <string name="days_txt">days</string>
    <string name="notification_txt">Notification</string>
    <string name="notification_message">\ - is waiting for your call.\</string>
    <string name="toast_edited">Edited</string>
    <string name="empty_txt">(empty)</string>
    <string name="no_data">List is empty...</string>
    <string name="no_data_search">Nothing has been found...</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="date_of_birth_hint">Date of birth</string>
    <string name="delete_img_title">Delete a photo</string>
    <string name="delete_img_desc">Are you sure you want to delete the photo?</string>
    <string name="tv_noNotifications">No notifications...</string>
    <string name="tv_date_today">Today</string>
    <string name="tv_date_yesterday">Yesterday</string>
    <string name="tv_notifications">Notifications</string>

    <string name="notification_birthday_message">Today is %1$sʻs birthday!</string>
    <string name="tv_appearance">Appearance</string>

    <string-array name="sort_list_options">
        <item>Added date</item>
        <item>Product expiration date</item>
        <item>Full name</item>
    </string-array>


</resources>