<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_style"
    android:orientation="vertical"
    android:paddingBottom="12dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/tv_clientName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/opensans_semi_bold"
        android:gravity="center"
        android:textColor="@color/name_txt_color"
        android:text="Name Female"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_delete_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/opensans_medium"
        android:text="@string/dialog_delete_desc"
        android:textSize="16sp"
        android:textColor="@color/title_desc_txt_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_clientName" />




    <LinearLayout
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_confirm_style"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="14dp"
        android:paddingTop="6dp"
        android:paddingEnd="14dp"
        android:paddingBottom="6dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_delete_desc">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_medium"
            android:text="@string/dialog_delete"
            android:textColor="@color/white"
            android:textSize="14sp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/frame_cancel_style"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_confirm"
        app:layout_constraintEnd_toStartOf="@+id/btn_confirm"
        app:layout_constraintTop_toTopOf="@+id/btn_confirm">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_medium"
            android:text="@string/dialog_cancel"
            android:textColor="@color/icon_edit_color"
            android:textSize="14sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>