<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    tools:context=".fragments.main.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_color"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_medium"
            android:text="@string/tv_settings"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/tv_appearance"
        android:textColor="@color/icons_color"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.loopeer.shadow.ShadowView
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="true"
        app:backgroundColor="@color/item_card_color"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_1"
        app:shadowColor="@color/card_shadow_color"
        app:shadowMargin="6dp"
        app:shadowRadius="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/frame_lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_changeLang"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@drawable/ic_language"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_lang"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_lang" />

                <TextView
                    android:id="@+id/tv_lang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/opensans_medium"
                    android:text="@string/tv_language"
                    android:textColor="@color/name_txt_color"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_changeLang"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/btn_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_lang_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:fontFamily="@font/opensans_semi_bold"
                        android:text="@string/chosen_lang_txt"
                        android:textColor="@color/icons_color"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/ic_arrow_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_right" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/frame_night_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                app:layout_constraintTop_toBottomOf="@+id/frame_lang">

                <ImageView
                    android:id="@+id/iv_change_mode"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@drawable/ic_dark_mode"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_dark_mode"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_dark_mode" />

                <TextView
                    android:id="@+id/tv_dark_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/opensans_medium"
                    android:text="@string/tv_night_mode"
                    android:textColor="@color/name_txt_color"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_change_mode"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.rm.rmswitch.RMSwitch
                    android:id="@+id/themeSwitch"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    app:enabled="true"
                    app:forceAspectRatio="false"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_change_mode"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/iv_change_mode"
                    app:switchBkgCheckedColor="@color/switcher_bg_checked_color"
                    app:switchBkgNotCheckedColor="@color/switcher_bg_not_checked_color"
                    app:switchDesign="large"
                    app:switchToggleCheckedColor="@color/switcher_toggle_checked_color"
                    app:switchToggleNotCheckedColor="@color/switcher_toggle_not_checked_color" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.loopeer.shadow.ShadowView>

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tv_notifications"
        android:textColor="@color/icons_color"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tv_1"
        app:layout_constraintTop_toBottomOf="@id/view_1" />


    <com.loopeer.shadow.ShadowView
        android:id="@+id/view_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="true"
        app:backgroundColor="@color/item_card_color"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_2"
        app:shadowColor="@color/card_shadow_color"
        app:shadowMargin="6dp"
        app:shadowRadius="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/frame_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_notification"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@drawable/ic_notifications"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_notification"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_notification" />

                <TextView
                    android:id="@+id/tv_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/opensans_medium"
                    android:text="@string/tv_notifications"
                    android:textColor="@color/name_txt_color"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_notification"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.rm.rmswitch.RMSwitch
                    android:id="@+id/notificationSwitch"
                    android:layout_width="50dp"
                    android:layout_height="0dp"
                    app:enabled="true"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_notification"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/iv_notification"
                    app:switchBkgCheckedColor="@color/switcher_bg_checked_color"
                    app:switchBkgNotCheckedColor="@color/switcher_bg_not_checked_color"
                    app:switchDesign="large"
                    app:switchToggleCheckedColor="@color/switcher_toggle_checked_color"
                    app:switchToggleNotCheckedColor="@color/switcher_toggle_not_checked_color" />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.loopeer.shadow.ShadowView>

</androidx.constraintlayout.widget.ConstraintLayout>