<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_item_client"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="6dp"
    android:layout_marginTop="3dp"
    android:layout_marginEnd="6dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="0dp"
    app:cornerRadius="14dp">

    <LinearLayout
        android:id="@+id/item_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/item_card_color"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/opensans_semi_bold"
                android:gravity="start"
                android:text="Name Female"
                android:textColor="@color/name_txt_color"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/btn_call"
                app:layout_constraintStart_toEndOf="@+id/iv_profile_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_phoneNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/opensans_medium"
                android:text="phone number"
                android:textColor="@color/phone_txt_color"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />


            <LinearLayout
                android:id="@+id/btn_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/frame_call_oval_style"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:minWidth="60dp"
                android:maxWidth="100dp"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingTop="4dp"
                android:paddingEnd="12dp"
                android:paddingBottom="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_profile_img">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:src="@drawable/ic_call" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:fontFamily="@font/opensans_medium"
                    android:text="@string/client_call"
                    android:textColor="@color/white"
                    android:textSize="12sp" />


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_first">

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/line_color"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_product_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/opensans_medium"
                android:text="@string/product_name"
                android:textColor="@color/title_desc_txt_color"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/opensans_medium"
                android:textColor="@color/desc_txt_color"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_product_name_txt"
                app:layout_constraintTop_toTopOf="@id/tv_product_name_txt" />

            <TextView
                android:id="@+id/tv_dioptre_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/opensans_medium"
                android:text="@string/product_dioptre"
                android:textColor="@color/title_desc_txt_color"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_product_name_txt"
                app:layout_constraintTop_toBottomOf="@id/tv_product_name" />

            <TextView
                android:id="@+id/tv_dioptre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/opensans_medium"
                android:textColor="@color/desc_txt_color"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tv_product_name"
                app:layout_constraintStart_toEndOf="@id/tv_dioptre_txt"
                app:layout_constraintTop_toTopOf="@id/tv_dioptre_txt" />

            <TextView
                android:id="@+id/tv_date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/opensans_medium"
                android:text="@string/product_purchase_date"
                android:textColor="@color/title_desc_txt_color"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_product_name_txt"
                app:layout_constraintTop_toBottomOf="@id/tv_dioptre" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/opensans_medium"
                android:textColor="@color/desc_txt_color"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tv_product_name"
                app:layout_constraintStart_toEndOf="@id/tv_date_txt"
                app:layout_constraintTop_toTopOf="@id/tv_date_txt" />

            <TextView
                android:id="@+id/tv_wearing_time_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/opensans_medium"
                android:text="@string/product_wearing_time"
                android:textColor="@color/title_desc_txt_color"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_product_name_txt"
                app:layout_constraintTop_toBottomOf="@id/tv_date" />

            <TextView
                android:id="@+id/tv_wearing_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/opensans_medium"
                android:textColor="@color/desc_txt_color"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tv_product_name"
                app:layout_constraintStart_toEndOf="@id/tv_wearing_time_txt"
                app:layout_constraintTop_toTopOf="@id/tv_wearing_time_txt" />

            <ImageView
                android:id="@+id/iv_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_notes"
                android:tint="@color/icon_notes_color"
                app:layout_constraintBottom_toBottomOf="@id/tv_notes_txt"
                app:layout_constraintStart_toStartOf="@id/tv_product_name_txt"
                app:layout_constraintTop_toTopOf="@id/tv_notes_txt" />

            <TextView
                android:id="@+id/tv_notes_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/opensans_medium"
                android:text="@string/product_note"
                android:textColor="@color/title_desc_txt_color"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/iv_notes"
                app:layout_constraintTop_toBottomOf="@id/tv_wearing_time" />

            <TextView
                android:id="@+id/tv_notes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/opensans_medium"
                android:textColor="@color/desc_txt_color"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tv_product_name"
                app:layout_constraintStart_toEndOf="@id/tv_notes_txt"
                app:layout_constraintTop_toTopOf="@id/tv_notes_txt" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>